test/end-to-end/parse-errors/type-parens.crow
f void(a ())
f void(a () set)
f void(a (nat))
f void(a (nat) set)
